CRM-5349: fix vertical alignment in pagination controls

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro/datagrid.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro/datagrid.less
@@ -43,6 +43,7 @@
     input[type=number] {
       width: 23px;
       height: 17px;
+      line-height: 18px;
     }
   }
   .pagination-centered {
